--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "gh-pages": "^1.2.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-redux": "^5.1.1",
     "react-scripts": "1.1.4",
+    "redux": "^4.0.1",
     "tachyons": "^4.10.0"
   },
   "scripts": {
