--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-redux": "^5.1.1",
     "react-scripts": "1.1.4",
     "redux": "^4.0.1",
+    "redux-logger": "^3.0.6",
     "tachyons": "^4.10.0"
   },
   "scripts": {
